# PocketLou-Brain

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
brain/: __init__.py  brain.py  core.py
brain/llm/: __init__.py  cloud_llm.py  local_llm.py  model_selector.py  router.py  web_search.py
brain/memory/: __init__.py  long_term_memory.py  profile.py  session.py  vector_store.py
brain/modes/: __init__.py  active_listen.py  actor.py  base.py  conspiracy.py  epiphany.py  standard.py  translation.py
brain/persona/: __init__.py  lou_profile.json  system_prompt.py
brain/prompt/: __init__.py  builder.py
cloud/: __init__.py  claude_api.py  sync.py
config/: modes.json  settings.json
data/profiles/: lou.json
docs/: download_model.md
hardware/: __init__.py  boot.sh  button.py  haptic.py
modes/: __init__.py  active_listen.py  actor.py  conspiracy.py  epiphany.py  standard.py  translation.py
scripts/: install.sh  run_desktop.py
tests/: test_brain.py  test_long_term_memory.py  test_memory.py  test_model_selector.py  test_modes.py  test_web_search.py
voice/: __init__.py
voice/stt/: __init__.py
voice/translation/: __init__.py
voice/tts/: __init__.py
